# oi-dbt

./: .gitignore  .gitmodules  CMakeLists.txt  IREmitter.cpp  IROpt.cpp  OIDecoder.cpp  README.md  RegionRepresentation.cpp  interpreter.cpp  machine.cpp  main.cpp  manager.cpp  syscallIREmitter.cpp
AOS/: .AOSIROpt.cpp.swp  .GASolver.cpp.swp  AOS.cpp  AOSDatabase.cpp  AOSDataset.cpp  AOSIROpt.cpp  AOSLog.cpp  AOSParams.cpp  AOSRegionCharacterizationStrategy.cpp  AOSSimilarityStrategy.cpp  AOSSolver.cpp  CBRSolver.cpp  CMakeLists.txt  CodeAnalyzer.cpp  DNA.cpp  GASolver.cpp  RMHCSolver.cpp  SearchSpace.cpp  Utils.cpp  example.json  example.yaml  exampleGA.yaml  exampleRMHC.yaml  parameters.txt
AOS/include/: AOS.hpp  AOSDatabase.hpp  AOSICSolver.hpp  DNA.hpp  (+11 more)
RFT/: MRET2.cpp  MethodBased.cpp  NET.cpp  NETPlus.cpp  Preheat.cpp  RFT.cpp
database/: Bubblesort1.yaml  Bubblesort10.yaml  Bubblesort11.yaml  Bubblesort12.yaml  Bubblesort13.yaml  Bubblesort14.yaml  Bubblesort15.yaml  Bubblesort16.yaml  Bubblesort17.yaml  Bubblesort18.yaml  Bubblesort19.yaml  Bubblesort2.yaml  Bubblesort3.yaml  Bubblesort4.yaml  Bubblesort5.yaml  Bubblesort6.yaml  Bubblesort7.yaml  Bubblesort8.yaml  Bubblesort9.yaml  FloatMM1.yaml  FloatMM2.yaml  FloatMM3.yaml  FloatMM4.yaml  FloatMM5.yaml  FloatMM6.yaml  FloatMM7.yaml
include/: AOS.hpp  AOSDatabase.hpp  AOSDataset.hpp  AOSIROpt.hpp  AOSLog.hpp  AOSParams.hpp  AOSPasses.hpp  AOSRegionCharacterizationStrategy.hpp  AOSSimilarityStrategy.hpp  AOSSolver.hpp  CodeAnalyzer.hpp  DNA.hpp  GASolver.hpp  IREmitter.hpp  IRJIT.hpp  IROpt.hpp  RFT.hpp  RMHCSolver.hpp  RegionRepresentation.hpp  SearchSpace.hpp  interpreter.hpp  manager.hpp  timer.hpp
seqalign/: CMakeLists.txt  alignment.c  alignment_scoring.c  needleman_wunsch.c
(+2 files in other folders)
